# nanit-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs
proto/: nanit.proto
src/: main.rs  util.rs
src/api/: client.rs  error.rs  types.rs
src/cli/: babies.rs  login.rs  messages.rs  mod.rs  sensors.rs  stream.rs  watch.rs
src/motion/: calibrator.rs  detector.rs  mod.rs  pipeline.rs
src/session/: mod.rs
src/ws/: codec.rs  connection.rs
